fix layout bugs in new study

--- a/app/assets/stylesheets/_study.css.scss
+++ b/app/assets/stylesheets/_study.css.scss
@@ -208,3 +208,28 @@
   margin-top: 3px;
   font-size: .7rem;
 }
+
+.new-study__controls {
+  @include clearfix;
+  margin: $space 0;
+
+  h1 {
+    margin: 0;
+
+    @include big {
+      float: left;
+    }
+
+    @include medium {
+      margin-bottom: $space/2;
+    }
+  }
+
+  button {
+    float: right;
+
+    @include big {
+      margin-top: 13px;
+    }
+  }
+}
